methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:35: error: not found: type color
def faireMotif(c:color){
                 ^MethodsPicture:3: error: not found: value c
    faireMotif(c)
               ^MethodsPicture:14: error: not found: type color
def faireV(c:color){
             ^